Le défilement horizontal ferme la dernière limite de la 10.13
Écarté « pour la symétrie », puis demandé — donc livré.

LayoutSpec.scroll passe d'un booléen à un AXE : none, vertical, horizontal,
both. Une énumération et non deux booléens — « défilant » et « défilant en X »
se seraient lus comme deux réglages indépendants alors qu'ils décrivent une
seule chose, et le second aurait porté un nom que le premier n'a pas.

Trois pièges refermés en chemin.

Le NBT écrit l'axe ET garde le booléen à côté, comme « rel » vit à côté du mode
d'un Extent : une version antérieure du mod y lit « ce panneau défile » — le
sens le plus proche dont elle dispose — au lieu de croire qu'il est figé. En
BScript, scroll: true reste accepté et vaut vertical, ce qu'il voulait dire.

Les deux curseurs sont calculés ENSEMBLE, parce qu'ils se gênent : chacun
s'arrête avant le coin que l'autre occupe. Séparément ils se recouvriraient, et
celui du dessous serait devenu inattrapable dans son dernier centimètre — là où
l'on va justement chercher la fin d'une page.

Et le choix d'axe de la molette est UNE règle, dans le noyau, lue par le jeu
comme par le concepteur. Maj vise l'horizontal, mais un panneau qui ne défile
que sur un axe répond sans qu'on ait à le savoir : exiger la bonne touche là où
il n'y a qu'un choix serait une devinette, et le joueur conclurait que la
molette ne marche pas. Deux règles d'axe auraient fini par diverger, et l'auteur
aurait découvert que son menu ne se parcourt pas comme il l'a conçu.

Au clavier, Ctrl+←/→ ; et Origine ramène les DEUX axes, parce que « le début »
d'une page est son coin, pas la première ligne d'une colonne dont on serait
encore décalé à droite. La révélation d'un élément suit la même règle : il peut
être sorti par le bas ET par la droite.

Le diagnostic couvre les deux axes : un panneau qui défile horizontalement mais
dont la largeur s'ajuste à ses enfants ne défilera jamais non plus.

1080 tests headless, 17 gametests, verts. Story et gate 10.13 amend